...
    <string name="courses_tutoring_label">Courses Tutoring:</string>
    <string name="rating_label">Rating:</string>
    <string name="bio_label">Bio:</string>

    <!-- string array for spinner -->
    <string-array name="grade_array">
        <item>Freshman</item>
        <item>Sophomore</item>
        <item>Junior</item>
        <item>Senior</item>
        <item>Graduate</item>
        <item>Other</item>
    </string-array>

    <!--  tutees specifically  -->
...
