...
            android:layout_height="wrap_content"
            android:text="@string/grade_label"
            android:textSize="20sp"
            />

        <Spinner
            android:id="@+id/grade_spinner"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:drawSelectorOnTop="true"
            android:entries="@array/grade_array"
            android:textSize="25dp" />

...
