...

        <FrameLayout
            android:layout_width="398dp"
            android:layout_height="89dp">

            <RatingBar
                android:id="@+id/simpleRatingBar"
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="0dp"
                android:background="#FFFFFF"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:progressTint="@color/colorAccent"
                android:rating="0" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="280dp"
                android:layout_marginTop="0dp"
                android:background="@color/colorPrimary"
                android:onClick="updateRating"
...
                android:layout_height="wrap_content"
                android:layout_marginLeft="280dp"
                android:layout_marginTop="55dp"
                android:text="Your Rating: "
                android:textColor="@color/colorAccent" />
            <TextView
                android:id="@+id/ratingText"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="360dp"
                android:layout_marginTop="55dp"
                android:text="0"
                android:textColor="@color/colorAccent" />
...
