<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_profile"/>

    <item
            android:id="@+id/navigation_search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/title_search"/>

    <item
            android:id="@+id/navigation_tutors"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/title_rating"/>
    <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_notifications"/>
</menu>
