...
                android:id="@+id/tutor_buttons"
                android:visibility="gone">
                <com.google.android.material.button.MaterialButton
                    android:text="Go to Profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gotoprofile"
                    />
            </com.google.android.material.button.MaterialButtonToggleGroup>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
